# typing

./: README.md
backend/: .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
backend/migrations/: 20241021053402_create_users_table.up.sql  20241021081753_create_lessons_table.down.sql  20241021081753_create_lessons_table.up.sql  20241022054239_add_column_name_to_users.up.sql  20241106070238_add_column_example_to_lessons.down.sql  20241106070238_add_column_example_to_lessons.up.sql  20241106074753_create_results_table.down.sql  20241106074753_create_results_table.up.sql  20241107072916_add_column_time_to_lessons.down.sql  20241107072916_add_column_time_to_lessons.up.sql  20241111061933_create_shutings_table.down.sql  20241111061933_create_shutings_table.up.sql  20241111061934_create_words_table.up.sql  20241111061935_create_results_table.up.sql  20241116073313_add_column_point_to_users.down.sql  20241116073313_add_column_point_to_users.up.sql  20241122084947_add_column_is_rondom_to_shutings.down.sql  20241122084947_add_column_is_rondom_to_shutings.up.sql  20241123033036_add_column_total_point_to_users.down.sql  20241123033036_add_column_total_point_to_users.up.sql  20241124030453_create_table_children_parents.down.sql  20241124030453_create_table_children_parents.up.sql  20241204044744_create_table_gift_requests.down.sql  20241204044744_create_table_gift_requests.up.sql  20250112032820_rename_column_users.down.sql  20250112032820_rename_column_users.up.sql  20250112041103_rename_column_results.down.sql  (+5 more)
(+192 files in other folders)
