[package]
name = "myapp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "myapp"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "bin/seed.rs"

[dependencies]
rand = "0.8"
axum = "0.7.5"
axum-extra = { version ="0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.5.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
jsonwebtoken = "9.3"
dotenvy = "0.15"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
bcrypt = "0.11"
reqwest = { version = "0.12", features = ["json"] }
validator = { version = "0.14", features = ["derive"] }
regex = "1.5"
strsim = "0.10"
